# mistralrs-oxide

./: Cargo.toml  build.rs  build_kernels.sh  deploy.sh  setup_remote.sh
examples/: basic_inference.rs  benchmark.rs
src/: error.rs  lib.rs  pipeline.rs  tokenizer.rs
src/cache/: kv_cache.rs  mod.rs
src/core/: device.rs  dtype.rs  mod.rs  storage.rs  tensor.rs
src/cuda_backend/: context.rs  cublas.rs  errors.rs  kernels.rs  launcher.rs  memory.rs  mod.rs  streams.rs
src/kernels/: attention.rs  elementwise.rs  execution.rs  integration.rs  matmul.rs  mod.rs  normalization.rs
src/layers/: attention.rs  embedding.rs  linear.rs  mod.rs  norm.rs  transformer.rs
src/loading/: gguf.rs  mod.rs  safetensors.rs
src/models/: llama.rs  mistral.rs  mod.rs
src/ops/: activation.rs  attention.rs  embedding.rs  math.rs  matmul.rs  mod.rs  norm.rs
