[package]
name = "mistralrs-oxide"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CUDA-Oxide backend for mistral.rs - replacing Candle"
license = "MIT"

[dependencies]
half = { version = "2.7", features = ["bytemuck"] }
bytemuck = { version = "1.24", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.7"
memmap2 = "0.9"

# Optional CUDA dependencies - these are for the real implementation
# When cuda-oxide is properly integrated, these will be actual dependencies
# cuda-core = { path = "/path/to/cuda-oxide/crates/cuda-core", optional = true }
# cuda-device = { path = "/path/to/cuda-oxide/crates/cuda-device", optional = true }
# cuda-host = { path = "/path/to/cuda-oxide/crates/cuda-host", optional = true }

# For now, these are stub dependencies
cuda-core = { version = "0.1", optional = true }
cuda-host = { version = "0.1", optional = true }

[features]
default = []
cuda = ["cuda-core", "cuda-host"]
gpu = ["cuda"]
async-ops = ["cuda"]

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"

[[bin]]
name = "infer"
path = "examples/basic_inference.rs"

[[bin]]
name = "benchmark"
path = "examples/benchmark.rs"
