[package]
name = "mistralrs-oxide"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "CUDA-Oxide backend for mistral.rs - replacing Candle"
license = "MIT"

[dependencies]
half = { version = "2.7", features = ["bytemuck"] }
bytemuck = { version = "1.24", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.7"
memmap2 = "0.9"

# CUDA support via cudarc (latest stable)
cudarc = { version = "0.12", optional = true, features = ["cuda-12050", "driver", "nvrtc"] }

[features]
default = []
cuda = ["cudarc"]
gpu = ["cuda"]

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
